@@ -15,6 +15,13 @@ configuration =
 	#	dw	force version to Divine Wind (5.x)
 	gametype = auto
 
+	# Remove type: which landless nations to remove. Possible values:
+	#	none	remove none of them
+	#	dead	remove ones without a cultural backing
+	#	all	remove all of them
+	# Note: if there are not enough V2 tags, some or all of these will be done no matter what.
+	removetype = dead
+	
 	# Note: if converting to vanilla V2, you may want to merge some EU3 nations in order for tags to make sense.
 	# Merge settings are found in merge_nations.txt, rather than this file.
 }
